--- a/main.css
+++ b/main.css
@@ -67,14 +67,17 @@ margin-bottom: 3px;
 /* tabel */
 @media (min-width:768px){
 main h2{
-margin-top: 45px;
+margin-top: 40px;
 margin-bottom: 30px;
 padding-left: 15px;
 }
 .section-1 p {
     padding-bottom: 30px;
 }
-
+.team-icons {
+    top: 163px;
+    left: 87px;
+}
 }
 /* laptop */
 @media (min-width:992px){
@@ -99,19 +102,9 @@ margin-bottom: 10px;
 .section-2-team{
     display: flex;
 }
-.team-name{
-padding-left: 15px;
-}
-.team-name p:last-child{
-font-size: 14px;
-}
 .team-icons{
 top: 95px;
 left: 27px;
-}
-.team-icon{
-height: 50px;
-width: 50px;
 }
 }
 /* desktop */
@@ -136,36 +129,22 @@ margin-bottom: 40px;
 }
 .team{
 margin-bottom: 7%;
-}
-.team-name{
-padding-left: 5px;
-}
-.team-name p:first-child{
-font-size: 14px;
-}
-.team-name p:last-child{
-font-size: 10px;
-}
-.team-icon {
-height: 35px;
-width: 35px;
+flex-wrap: wrap;
 }
 .team-icons {
-top: 60px;
-left: 9px;
+    top: 120px;
+    left: 67px;
 }
 }
 .team{
 display: flex;
-margin-bottom: 17%;
-}
-.team-image>img{
-width: 100%;
+margin-bottom: 10%;
+flex-wrap: wrap;
 }
 .team-name{
-width: 100%;
-height: 20%;
+height: 60px;
 background-color: rgb(225, 230, 234);
+padding-left: 15px;
 position: relative;
 bottom: 2px;
 display: flex;
@@ -176,6 +155,9 @@ justify-content: center;
 text-transform:uppercase;
 color: black;
 }
+.team-name p:last-child {
+font-size: 14px;
+}
 .team-icons{
 display: none;
 position: absolute;
@@ -184,23 +166,29 @@ z-index: 1;
 .team-icon{
 background-color: #3a454d;
 margin: 0px 1px;
+height: 50px;
+width: 50px;
 }
 .team-image{
 position: relative;
+margin-bottom: 30px;
 }
-.team > div:hover .team-icons{
+.team-image img{
+    width: 100%;
+}
+.team-image:hover .team-icons{
 display: flex;
 }
-.team > div:hover .team-name{
+.team-image:hover .team-name{
     background-color:#3a454d ;
 }
-.team > div:hover .team-name>p{
+.team-image:hover .team-name>p{
     color: white;
 }
-.team > div:hover  img{
+.team-image :hover  img{
    background-color:  rgba(255, 255, 255, 0.301);
 }
-.overlay{
+.team-image :hover .overlay{
     position: fixed;
     top: 0;
     bottom: 0;
