--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ padding-right: 15px;
         flex: 0 0 25%;
         max-width: 25%;
     }
+    .col-md-4 {
+        flex: 0 0 33.33333%;
+        max-width: 33.33333%;
+    }
     .col-md-5 {
         flex: 0 0 41.66667%;
         max-width: 41.66667%;
