--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:wght@700&display=swap');
 *{
 box-sizing: border-box;
-}
-body{
-font-family: 'Open Sans', sans-serif;
 }
 html, body {
 max-width: 100%;
@@ -69,6 +66,10 @@ padding-right: 15px;
         flex: 0 0 66.66667%;
         max-width: 66.66667%;
     }
+    .col-sm-9{
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
     .col-sm-12{
         flex: 0 0 100%;
         max-width: 100%;
@@ -116,6 +117,10 @@ padding-right: 15px;
         flex: 0 0 58.33333%;
         max-width: 58.33333%;
     }
+    .col-md-10{
+        flex: 0 0 83.33333%;
+        max-width: 83.33333%;
+    }
     .col-md-12{
         flex: 0 0 100%;
         max-width: 100%;
@@ -159,6 +164,9 @@ padding-right: 15px;
     border-radius: 3px;
     }
     .menu > li > a{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14px;
+        font-weight: 600;
     text-decoration: none;
     color: #a4aead;
     }
