--- a/slider.css
+++ b/slider.css
@@ -9,6 +9,7 @@ text-decoration: none;
 border:  solid #ffe5e5 2px;
 padding: 15px 15px;
 border-radius: 8px;
+font-size: 16px;
 }
 .slider h1,
 .slider p,
